# tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  channel.rs  gitlab.rs  mod.rs  note.rs  reminder.rs  settings.rs  task.rs  template.rs
src-tauri/src/database/: connection.rs  mod.rs  schema.rs
src-tauri/src/database/dao/: backup.rs  channel.rs  gitlab_scan.rs  mod.rs  note.rs  reminder.rs  settings.rs  task.rs  template.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/gitlab/: client.rs  mod.rs  notifier.rs  scanner.rs
src-tauri/src/services/notifier/: bark.rs  dingtalk.rs  feishu.rs  mod.rs  test.rs  wecom.rs
src-tauri/src/services/scheduler/: cron_parser.rs  gitlab_scheduler.rs  mod.rs  scheduler.rs  special_dates.rs
src-tauri/src/services/walkin/: captcha.rs  client.rs  mod.rs
src/components/: ErrorBoundary.tsx  theme-provider.tsx
src/config/: modules.ts
src/i18n/: index.ts
src/lib/: cron.ts  taskFilters.ts  taskTemplate.ts  useKeyboardShortcuts.ts
src/pages/: ChannelsPage.tsx  DashboardPage.tsx  GitLabHistoryPage.tsx  GitLabOverviewPage.tsx  GitLabSettingsPage.tsx  HistoryPage.tsx  NotesPage.tsx  PomodoroTimerPage.tsx  QuickNotesPage.tsx  SettingsPage.tsx  TaskReminderPage.tsx  TemplatesPage.tsx  TimerPage.tsx
(+75 files in other folders)
