[package]
name = "tools"
version = "0.1.0"
description = "Tools - 桌面工具箱"
authors = ["pengchenghui"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json"] }
cron = "0.12"
